@@ -85,7 +85,7 @@ DECLARE SUB cycletile (tanim_state() AS TileAnimState, tastuf() AS INTEGER)
 DECLARE SUB loadtilesetdata OVERLOAD (BYREF tileset AS TilesetData ptr, BYVAL tilesetnum AS INTEGER)
 DECLARE SUB loadtilesetdata OVERLOAD (tilesets() AS TilesetData ptr, BYVAL layer AS INTEGER, BYVAL tilesetnum AS INTEGER)
 DECLARE SUB unloadtilesetdata (BYREF tileset AS TilesetData ptr)
-DECLARE SUB loadmaptilesets (tilesets() AS TilesetData ptr, gmap() AS INTEGER)
+DECLARE SUB loadmaptilesets (tilesets() AS TilesetData ptr, gmap() AS INTEGER, BYVAL resetanimations = YES)
 DECLARE SUB unloadmaptilesets (tilesets() AS TilesetData ptr)
 DECLARE SUB writescatter (s$, lhold%, start%)
 DECLARE SUB readscatter (s$, lhold%, start%)
